updated index and css

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <div id="instructions-section" class="container hidden">
         <h1>Wazuh Server Deployment Instructions</h1>
+        <p class="author-credit">By: aabella</p> <div id="options-nav"></div>
 
         <div id="options-nav">
             <button id="btn-option1" class="option-button active">Option 1</button>
